# accessible_gis

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
data/countries/: AD.geojson  AE.geojson  AF.geojson  AG.geojson  AI.geojson  AL.geojson  AM.geojson  AO.geojson  AQ.geojson  AR.geojson  AS.geojson  AT.geojson  AU.geojson  AW.geojson  AX.geojson  AZ.geojson  BA.geojson  BB.geojson  BD.geojson  BE.geojson  BF.geojson  BG.geojson  BH.geojson  BI.geojson  BJ.geojson  BL.geojson  BM.geojson  BN.geojson  BO.geojson  BQ.geojson  BR.geojson  BS.geojson  BT.geojson  BW.geojson  BY.geojson  BZ.geojson  CA.geojson  CC.geojson  CD.geojson  CF.geojson  (+199 more)
external-touch-device/: index.html  package-lock.json  package.json
external-touch-device/public/: ocrs_bg.wasm
external-touch-device/src/: geojson-parser.ts  main.ts  ocr-manager.ts  raster.ts  speach.ts  touch-gpt.ts  utils.ts  websocket.ts
src/: App.tsx  api.ts  app.rs  aspect-calculator.tsx  audio.rs  binded-input.tsx  bindings.ts  classification.tsx  commandline.rs  commands.rs  context.ts  dem_methods.tsx  derivatives.rs  dialog.tsx  drawer.tsx  events.rs  feature-copier.tsx  feature-creator.tsx  feature-picker.tsx  files.ts  geometry.tsx  graph.rs  histogram_settings_window.rs  layer_simplifier.tsx  layout.rs  linestring.tsx  list_view.rs  main-screen.tsx  main.rs  main.tsx  new-dataset-screen.tsx  new_dataset_window.rs  open-screen.tsx  option-picker.tsx  points-table.tsx  polygons.tsx  raster-navigator.tsx  raster.rs  raster_graph_settings_window.rs  render_methods_selector.tsx  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: commandline.rs  dataset_collection.rs  files.rs  gdal_if.rs  geometry.rs  main.rs  math.rs  server.rs  state.rs  stats.rs  thiessen_polygons.rs  tools.rs  ui.rs  web_socket.rs
src-tauri/src/audio/: graph.rs  histogram.rs  low_level.rs  mod.rs
src-tauri/src/commands/: audio.rs  combined.rs  constants.rs  context.rs  dataset.rs  dem.rs  individual_settings.rs  mod.rs  raster.rs  settings.rs  thiessen_polygons.rs  ui.rs  vector.rs
src-tauri/src/gdal_if/: dataset.rs  field_schema.rs  fields.rs  layer.rs  local_feature.rs  mod.rs  processing.rs  raster.rs  vector.rs
src-tauri/src/state/: dataset_collection.rs  loaded.rs  mod.rs  preloaded.rs  settings.rs  ui_state.rs  user_state.rs
src-tauri/src/state/gis/: combined.rs  dataset.rs  mod.rs  raster.rs  shared.rs  vector.rs
src/audio/: graph.rs  histogram.rs  low_level.rs  mod.rs
src/gis/: commands.rs  derivatives.rs  mod.rs  raster.rs
src/gui/: app.rs  events.rs  histogram_settings_window.rs  layout.rs  list_view.rs  mod.rs  new_dataset_window.rs  raster.rs  raster_graph_settings_window.rs  vector.rs  views.rs  windows.rs
static/: package-lock.json  package.json  vite.config.ts
static/src/: audio.ts  main.ts  ocrs.js  render-image.ts  types.ts
