[package]
name = "accessible-gis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
assert_no_alloc = "1.1.2"
cacao = { git = "https://github.com/ryanmcgrath/cacao", rev = "4f40d62"}
cpal = "0.15.2"
fundsp = "0.15.0"
gdal = {version = "0.15.0", features = ["array", "bindgen", "ndarray"]}
gdal-sys = { version = "0.9.0", features = ["bindgen"]}
ndarray = "0.15.6"
