[package]
name = "accessible-gis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
assert_no_alloc = "1.1.2"
clap = { version = "4.4.6", features = ["derive", "string"] }
cpal = "0.15.2"
fundsp = "0.15.0"
gdal = {version = "0.16.0", features = ["array", "bindgen", "ndarray"]}
gdal-sys = { version = "0.9.0", features = ["bindgen"]}
itertools = "0.11.0"
ndarray = "0.15.6"
ndarray-interp = "0.3.1"
ndarray-stats = "0.5.1"
optional_struct = "0.3.1"

[target.'cfg(target_os="macos")'.dependencies]
cacao = { git = "https://github.com/isaac-leonard/cacao", branch = "changes_for_framework"}
cacao_framework = { git = "https://github.com/isaac-leonard/cacao_framework"}
