[package]
name = "accessible_gis"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15.6"
geo = {"version" = "0.28.0", "features" = ["serde", "use-proj"] }
proj = "0.27.2"
geo-types = {"version" = "0.7.13", "features" = ["serde", "use-rstar_0_12"] }
itertools = "0.12.1"
geos = { "version" = "8.3.1", "features" = ["geo" ,"wkt"] }
gdal-sys = {"git" = "https://github.com/Isaac-Leonard/gdal-rs", "rev" = "ea7e085521303ba7b4dccfda6ec539fde43f0852", "features" = [ "bindgen" ] }
gdal = {"git" = "https://github.com/Isaac-Leonard/gdal-rs", "rev" = "ea7e085521303ba7b4dccfda6ec539fde43f0852", "features" = ["array", "bindgen"] }
csv = "1.3.0"
num-traits = "0.2.18"
statrs = "0.16.0"
rstar = {"version" = "0.12.0", "features" = [ "serde", "mint"] }
mint = "0.5.9"
specta = {"version" = "2.0.0-rc.12", "features" = [ "function" ] }
tauri-specta = { version = "2.0.0-rc.10", features = ["javascript", "typescript"] }
enum-as-inner = "0.6.0"
chrono = "0.4.38"
enum_dispatch = "0.3.13"
strum = {"version" = "0.26.2", "features" = ["derive"] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"
actix-web = "4.6.0"
actix-files = "0.6.5"
local-ip-address = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
