[package]
name = "accessible_gis"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15.6"
geo = {"version" = "0.28.0", "features" = ["serde", "use-proj"] }
proj = "0.27.2"
geo-types = {"version" = "0.7.13", "features" = ["serde", "use-rstar_0_12"] }
itertools = "0.12.1"
geos = { "version" = "8.3.1", "features" = ["geo" ,"wkt"] }
gdal-sys = {"git" = "https://github.com/Isaac-Leonard/gdal-rs", "rev" = "ea7e085521303ba7b4dccfda6ec539fde43f0852", "features" = [ "bindgen" ] }
gdal = {"git" = "https://github.com/Isaac-Leonard/gdal-rs", "rev" = "ea7e085521303ba7b4dccfda6ec539fde43f0852", "features" = ["array", "bindgen"] }
csv = "1.3.0"
num-traits = "0.2.18"
statrs = "0.16.0"
rstar = {"version" = "0.12.0", "features" = [ "serde", "mint"] }
mint = "0.5.9"
specta = { "version" = "=2.0.0-rc.20", "features" = ["function"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["javascript", "typescript", "derive"] }
enum-as-inner = "0.6.0"
chrono = "0.4.38"
enum_dispatch = "0.3.13"
strum = {"version" = "0.26.2", "features" = ["derive"] }
tauri-plugin-dialog = "2.0.0-rc.7"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-shell = "2.0.0-rc.3"
actix-web = "4.6.0"
actix-files = "0.6.5"
local-ip-address = "0.6.1"
tokio = "1.39.2"
actix-ws = "0.3.0"
futures-util = "0.3.30"
assert_no_alloc = "1.1.2"
cpal = "0.15.2"
fundsp = "0.15.0"
clap = { version = "4.5.11", features = ["derive"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
specta-typescript = "0.0.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
